...
            android:background="@drawable/button_selector"
            android:visibility="@{viewModel.hidePrevious ? View.INVISIBLE: View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="22dp"
            android:text="@string/next_button"
            android:background="@drawable/button_selector"
            android:visibility="@{viewModel.hideNext ? View.INVISIBLE: View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit_in_detail_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="76dp"
            android:text="@string/submit_button"
            android:background="@drawable/button_selector"
...
