...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant_back"
        tools:context=".SummaryScreenFragment"
        android:id="@+id/summary_screen_parent">

        <TextView
            android:id="@+id/score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
...
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/time_title"
            app:layout_constraintTop_toBottomOf="@+id/score" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="143dp"
            android:layout_marginTop="130dp"
            android:text="@string/reset_button"
            android:onClick="afterResetButton"
...
