...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant_back"
        tools:context=".QuestionsListScreenFragment"
        android:id="@+id/list_screen_parent">

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
...

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/button_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
...
